--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<div class="green">
 		<div class="orange">
 			<div class="red" >
-			<p class="b"><a href="https://caitlynvaliente.github.io/IEP/">Accommodations</a></p>
+			<p class="b"><a href="https://israelizzy123.github.io/IEP website/index.html">Accommodations</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> Interviews </p>
+			<p class="b"><a href="https://caitlynvaliente.github.io/IEP/">Interviews</a></p>
 			</div>
 			<div class="red">
 			<p class="b"> Main Page </p>
