--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="green">
 		<div class="orange">
 			<div class="red" >
-			<p class="b"><a href="https://israelizzy123.github.io/IEP website/index.html">Accommodations</a></p>
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 			</div>
 			<div class="red">
 			<p class="b"><a href="https://caitlynvaliente.github.io/IEP/">Interviews</a></p>
