--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p class="b"> About Us </p>
 			</div>
 			<div class="red">
-			<p class="b"> Quiz </p>
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 			</div>
 		</div>
 		<div class="blue">
