--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 					 <button onclick ="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSduqvtEgKR3Kb5RCsV64hZWM4NRY6YOEKhCGmz9lfEAyp91Pg/viewform?usp=sf_link';" class="center2" ><p class="a">  Quiz </button></p>
 				</div>
 				<div class="gray3">
-					<img src="image/quiz.PNG" style="width:100%">
+					<img src="quizpage/quiz.PNG" style="width:100%">
 				</div>
 			</div>
 			<div class="purple2"></div>
