--- a/IEP website/index.html
+++ b/IEP website/index.html
@@ -13,10 +13,10 @@
 		<div class="green">
 			<div class="teal">
 				<div class="red">
-				<p class="b">Accommodations</p>
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 				</div>
 				<div class="red">
-				<p class="b">Interviews</p>
+				<p class="b"><a href="https://caitlynvaliente.github.io/IEP/">Interviews</a></p>
 				</div>
 				<div class="red">
 				<p class="b">Main Page</p>
@@ -25,7 +25,7 @@
 				<p class="b">About Us</p>
 				</div>
 				<div class="red">
-				<p class="b">Quiz</p>
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 				</div>
 			</div>
 			<div class="blue">
