--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 			</div>
 			<div class="red">
-			<p class="b"><a href="https://caitlynvaliente.github.io/IEP/">Interviews</a></p>
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 			</div>
 			<div class="red">
 			<p class="b"> Main Page </p>
