--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -13,10 +13,10 @@
 		<div class="green">
 			<div class="orange">
 				<div class="red">
-					<p class="a"> Accommodations </p>
+					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 				</div>
 				<div class="red">
-					<p class="a"> Interviews </p>
+					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 				</div>
 				<div class="red">
 					<p class="a"> Main Page </p>
@@ -25,7 +25,7 @@
 					<p class="a"> about us </p>
 				</div>
 				<div class="red">
-					<p class="a"> Quiz </p>
+					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 				</div>
 			</div>
 			<div class="blue">
