--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -12,22 +12,22 @@
 		<div class="pink"></div>
 		<div class="green">
 			<div class="orange">
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
-				</div>
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
-				</div>
-				<div class="red">
-					<p class="a"> Main Page </p>
-				</div>
-				<div class="red">
-					<p class="a"> about us </p>
-				</div>
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
-				</div>
+			<div class="red" >
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 			</div>
+			<div class="red">
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
+			</div>
+			<div class="red">
+				<p class="b"> Main Page </p>
+			</div>
+			<div class="red">
+				<p class="b"> About Us </p>
+			</div>
+			<div class="red">
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
+			</div>
+		</div>
 			<div class="blue">
 				<div class="lightblue">
 					<div class="yellow4"></div>
