--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -19,7 +19,7 @@
 				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 			</div>
 			<div class="red">
-				<p class="b"> Main Page </p>
+				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
 				<p class="b"> About Us </p>
