--- a/CaitlynCode/index2.html
+++ b/CaitlynCode/index2.html
@@ -21,7 +21,7 @@
 					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 				</div>
 				<div class="red">
-					<p class="a"> Main Page </p>
+					<p class="b"><a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 				</div>
 				<div class="red">
 					<p class="a"> about us </p>
