--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="red2"></div>
 			<div class="lightred">
 				<div class="brown">
-					<p class="a"> Individual Education Plans </p>
+					<p class="a"> Individual Education Program </p>
 				</div>
 			</div>
 			<div class="brown2">
