--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -12,62 +12,73 @@
 		<div class="pink"></div>
 		<div class="green">
 			<div class="orange">
-			<div class="red" >
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
+				<div class="red">
+					<p class="a"> Accommodations </p>
+				</div>
+				<div class="red">
+					<p class="a"> Interviews </p>
+				</div>
+				<div class="red">
+					<p class="a"> Main Page </p>
+				</div>
+				<div class="red">
+					<p class="a"> about us </p>
+				</div>
+				<div class="red">
+					<p class="a"> Quiz </p>
+				</div>
 			</div>
-			<div class="red">
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
-			</div>
-			<div class="red">
-				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
-			</div>
-			<div class="red">
-				<p class="b"> About Us </p>
-			</div>
-			<div class="red">
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
-			</div>
-		</div>
 			<div class="blue">
 				<div class="lightblue">
 					<div class="yellow4"></div>
 					<div class="lightyellow">
-						<img src="room.JPG" alt="Trulli" class="center">
+						<img src="images/room.JPG" alt="Trulli" class="center">
 					</div>
 					<div class="yellow4"></div>
 				</div>
 				<div class="lightblue">
-					 <p class="b">Do you know you have an IEP? ( WHat is an IEP ? )  :
-					 
- Kinda do. I honestly don't know the full details but I do know the basics of it. For example, you get an accommodations like extended time for test or extended time for homework. Sometimes the teacher gives me the shorter version of the test than the original.
- </p>
+				<div class="black2">
+					<div class="green3"></div>
+					<div class="green4">
+						<p class="b"> Do you feel comfortable talking about your IEP? -
+If someone is trying to get in my business then no. but if it's like an interview or a job or college then yea i would have to be comfortable and have to deal with it. If someone just came up to me about it then yea i would be very uncomfortable with it because its none of your business and ask me these questions</p>
+					</div>
+				<div class="green3"></div>
+				</div>
+				<div class="black3"></div>
 				</div>
 			</div>
 		</div>
-		<div class="pink"></div>
-	</div>
+		<div class="pink2"></div>
+		</div>
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<center><img src="arrow4.png" alt="Trulli" width="180" height="180"><center/>
+			<center><img src="images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
 				<div class="yellow4"></div>
 				<div class="lightyellow">
-					<img src="chairs.JPG" alt="Trulli" class="center">
+					<img src="images/chairs.JPG" alt="Trulli" class="center">
 				</div>
 				<div class="yellow4"></div>
 			</div>
 			<div class="lightblue">
-				<div class="lightorange"></div>
-					<p class="b">  Do you feel comfortable talking about your iep ? :
-If someone is trying to get in my business then no. but if it's like an interview or a job or college then yea i would have to be comfortable and have to deal with it. If someone just came up to me about it then yea i would be very uncomfortable with it because its none of your business and ask me these questions</p>
+				<div class="black2">
+				<div class="green3"></div>
+				<div class="green4">
+					<p class="b">Do you feel comfortable talking about your IEP? -
+					If someone is trying to get in my business then no. but if it's like an interview or a job or college then yea i would have to be comfortable and have to deal with it. If someone just came up to me about it then yea i would be very uncomfortable with it because its none of your business and ask me these questions</p>
 				</div>
+					<div class="green3"></div>
+				</div>
+				<div class="black3"></div>
+			</div>
 
 		</div>
-		<div class="pink">
-				<a href="index2.html"><center><img src="arrow.png" alt="Trulli" width="180" height="180"><center/>
+		<div class="pink2">
+				<a href="index2.html"><center><img src="images/arrow.PNG" alt="Trulli" width="180" height="180"><center/>
 		</div>
 	</div>
 
