--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> About Us </p>
+			<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index.html">About Us</a></p>
 			</div>
 			<div class="red">
 			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
