--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -19,10 +19,10 @@
 					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 				</div>
 				<div class="red">
-					<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
+					<p class="b"><a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 				</div>
 				<div class="red">
-					<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
+					<p class="a"> about us </p>
 				</div>
 				<div class="red">
 					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
