--- a/IEP website/index.html
+++ b/IEP website/index.html
@@ -1,104 +1,95 @@
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Individual Education Program</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Individual Education Program</title>
+<link rel="stylesheet" href="style.css" />
+</head>
 
 <body>
-	<div class="yellow">
-		<div class="pink"></div>
-		<div class="green">
-			<div class="teal">
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
-				</div>
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
-				</div>
-				<div class="red">
-					<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
-				</div>
-				<div class="red">
-					<p class="b">About Us</p>
-				</div>
-				<div class="red">
-					<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
-				</div>
-			</div>
-			<div class="blue">
-				<div class="white" onmouseover="hover(this)" onmouseout="regular(this)">
-					<div class="text">
-						<font size="14"><p class="e">1.Rewording of questions</font>
-					</div>
-					<div class="picture">
-						<img class="restrict-img-size" src="images/timer2.png" alt="Timer">
-					</div>
-				</div>
-				<div class="white" onmouseover="hover(this)" onmouseout="regular(this)">
-					<div class="text">
-						<font size="14"><p class="e">2.Flexible setting to take tests</font>
-					</div>
-					<div class="picture">
-						<img class="restrict-img-size" src="images/test.jpg" alt="Tests">
-					</div>
-				</div>
-				<div class="white" onmouseover="hover(this)" onmouseout="regular(this)">
-					<div class="text">
-						<font size="14"><p class="e">3.Weekly home-school communication tool, such as a daily log book</font>
-					</div>
-					<div class="picture">
-						<img class="restrict-img-size" src="images/agenda.png" alt="takedown">
-					</div>
-				</div>
-				<div class="white" onmouseover="hover(this)" onmouseout="regular(this)">
-					<div class="text">
-						<font size="14"><p class="e">4.Extended time on tests/homework</font>
-					</div>
-					<div class="picture">
-						<img class="restrict-img-size" src="images/homework.jpg" alt="work">
-					</div>
-				</div>
-			    
-			
-			
-			
-			
-			</div>
-		</div>
-		<div class="pink"></div>
-	</div>
-	
-	<!--<div class="yellow">
-		<div class="pink"></div>
-		<div class="green2">
-			<div class="white"><font size="14"><p class="e">1.Rewording of questions</font><img class="restrict-img-size" src="images/timer2.png" alt="Timer"></div>
-			<div class="explain"><font size="6"><p class="e">During the test and you have a question on a test and 
-			you don’t know what some words means you can ask the resource teacher to reword the question and make it easier to your understanding.</font></div>
-			<div class="white"><font size="14"><p class="e">2.Flexible setting to take tests</font><img class="restrict-img-size" src="images/test.jpg" alt="Tests"></div>
-			<div class="explain"><font size="6"><p class="e">During the test if you don't feel comfortable taking a test in the classroom you can ask the resource teacher to pull you out
-			and take it in the room or taking it outside</font></div>
-			<div class="white"><font size="14"><p class="e">3.Weekly home-school communication tool, such as a daily log book</font><img class="restrict-img-size" src="images/agenda.png" alt="takedown"></div>
-			<div class="explain"><font size="6"><p class="e">When your going to forget you have homework or you need to remember an assignment that's due very soon you can use 
-			daily agenda planner to help out</font></div>
-			<div class="white"><font size="14"><p class="e">4.Extended time on tests/homework</font><img class="restrict-img-size" src="images/timer2.jpg" alt="timer"></div>
-			<div class="explain"><font size="6"><p class="e">Asking for extensions on homework and projects that you really struggling in you can go in person to ask the teacher or if you don't feel comfortable 
-			to ask a teacher then you can email the teacher</font></div>
-			<div class="white"><font size="14"><p class="e">5.Note card for assessments with Teacher</font><img class="restrict-img-size" src="images/notecards.gif" alt="note card"></div>
-			<div class="explain"><font size="6"><p class="e">By using note cards for the assessments of how the teacher can get help with studying and how word banks and 
-			also explaining how studying.</font></div>
-			</div>
-		<div class="pink"></div>
-	</div>
-	
-	-->
-	
-	
-	<script src="script.js"></script>
+<div class="yellow">
+<div class="pink"></div>
+<div class="green">
+<div class="teal">
+<div class="red">
+<p class="b">Accommodations</p>
+</div>
+<div class="red">
+<p class="b">Interviews</p>
+</div>
+<div class="red">
+<p class="b">Main Page</p>
+</div>
+<div class="red">
+<p class="b">About Us</p>
+</div>
+<div class="red">
+<p class="b">Quiz</p>
+</div>
+</div>
+<div class="blue">
+<div class="dropdown">
+<div class="lave" onmouseover="hover(this)" onmouseout="regular(this)">
+<div class="text">
+<font size="14"><p class="e">1.Rewording of questions</font>
+</div>
+<div class="picture">
+<img class="restrict-img-size" src="images/timer2.png" alt="Timer">
+</div>
+<div class="dropdown-content">
+<p>During the test and you have a question on a test and you don’t know what some words means you can ask the resource teacher to reword the question and make it easier to your understanding.</p>
+</div>
+</div>
+</div>
+<div class="dropdown">
+<div class="lave" onmouseover="hover(this)" onmouseout="regular(this)">
+<div class="text">
+<font size="14"><p class="e">2.Flexible setting to take tests</font>
+</div>
+<div class="picture">
+<img class="restrict-img-size" src="images/test.jpg" alt="Tests">
+</div>
+<div class="dropdown-content">
+<p>During the test if you don't feel comfortable taking a test in the classroom you can ask 
+the resource teacher to pull you out and take it in the room or taking it outside or if it's you just can't focus in class taking a test a separate area would be easier to focus better </p>
+</div>
+</div>
+</div>
+<div class="dropdown">
+<div class="lave" onmouseover="hover(this)" onmouseout="regular(this)">
+<div class="text">
+<font size="14"><span><p class="e">3.Weekly home-school communication tool, such as a daily log book</span></font>
+</div>
+<div class="picture">
+<img class="restrict-img-size" src="images/agenda.png" alt="takedown">
+</div>
+<div class="dropdown-content">
+<p>When your going to forget you have homework or you need to remember an assignment that's 
+due very soon you can use daily agenda planner to help out so the IEP teacher can check everyday</p>
+</div>
+</div>
+</div>
+<div class="dropdown">
+<div class="lave" onmouseover="hover(this)" onmouseout="regular(this)">
+<div class="text">
+<font size="14"><span><p class="e">4.Extended time on tests/homework</span></font>
+</div>
+<div class="picture">
+<img class="restrict-img-size" src="images/homework.jpg" alt="work">
+</div>
+<div class="dropdown-content">
+<p>Asking for extensions on homework and projects that you really struggling in you can go in person to ask the teacher or 
+if you don't feel comfortable to ask a teacher then you can email the teacher that you can ask for an extension</p>
+</div>
+</div>
+   </div>
+   </div>
+</div>
+<div class="pink"></div>
+</div>
+
+<script src="script.js"></script>
 </body>
 
 </html>
-
-
