--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -32,7 +32,7 @@
 				<div class="lightblue">
 					<div class="yellow4"></div>
 					<div class="lightyellow">
-						<img src="images/room.JPG" alt="Trulli" class="center">
+						<img src="Images/room.JPG" alt="Trulli" class="center">
 					</div>
 					<div class="yellow4"></div>
 				</div>
@@ -58,13 +58,13 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<center><img src="images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/>
+			<center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
 				<div class="yellow4"></div>
 				<div class="lightyellow">
-					<img src="images/chairs.JPG" alt="Trulli" class="center">
+					<img src="Images/chairs.JPG" alt="Trulli" class="center">
 				</div>
 				<div class="yellow4"></div>
 			</div>
@@ -86,7 +86,7 @@
 
 		</div>
 		<div class="pink2">
-				<a href="index2.html"><center><img src="images/arrow.PNG" alt="Trulli" width="180" height="180"><center/>
+				<a href="index2.html"><center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"><center/>
 		</div>
 	</div>
 
