--- a/CaitlynCode/index2.html
+++ b/CaitlynCode/index2.html
@@ -13,26 +13,26 @@
 		<div class="green">
 			<div class="orange">
 				<div class="red">
-					<p class="a"> Accommodations </p>
+					<p class="a">Accommodations </p>
 				</div>
 				<div class="red">
-					<p class="a"> Interviews </p>
+					<p class="a">Interviews </p>
 				</div>
 				<div class="red">
-					<p class="a"> Main Page </p>
+					<p class="a">Main Page </p>
 				</div>
 				<div class="red">
-					<p class="a"> about us </p>
+					<p class="a">About Us </p>
 				</div>
 				<div class="red">
-					<p class="a"> Quiz </p>
+					<p class="a">Quiz </p>
 				</div>
 			</div>
 			<div class="blue">
 				<div class="lightblue">
 					<div class="yellow4"></div>
 					<div class="lightyellow">
-						<img src="images/table.JPG" alt="Trulli" class="center">
+						<img src="Images/table.JPG" alt="Trulli" class="center">
 					</div>
 					<div class="yellow4"></div>
 				</div>
@@ -61,13 +61,13 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<a href="index.html"><center><img src="images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
+			<a href="index.html"><center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
 				<div class="yellow4"></div>
 				<div class="lightyellow">
-					<img src="images/room2.JPG" alt="Trulli" class="center">
+					<img src="Images/room2.JPG" alt="Trulli" class="center">
 				</div>
 				<div class="yellow4"></div>
 			</div>
@@ -89,10 +89,9 @@
 
 		</div>
 		<div class="pink2">
-			<a href="index3.html"><center><img src="images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
+			<a href="index3.html"><center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
 		</div>
 	</div>
 
 </body>
-
 </html>
