--- a/CaitlynCode/index3.html
+++ b/CaitlynCode/index3.html
@@ -31,7 +31,7 @@
 				<div class="lightblue">
 					<div class="yellow4"></div>
 					<div class="lightyellow">
-						<img src="images/computer.JPG" alt="Trulli" class="center">
+						<img src="Images/computer.JPG" alt="Trulli" class="center">
 					</div>
 					<div class="yellow4"></div>
 				</div>
@@ -60,13 +60,13 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<a href="index2.html"><center><img src="images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
+			<a href="index2.html"><center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
 				<div class="yellow4"></div>
 				<div class="lightyellow">
-					<img src="images/candy.JPG" alt="Trulli" class="center">
+					<img src="Images/candy.JPG" alt="Trulli" class="center">
 				</div>
 				<div class="yellow4"></div>
 			</div>
@@ -88,7 +88,7 @@
 
 		</div>
 		<div class="pink2">
-			<center><img src="images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
+			<center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
 		</div>
 	</div>
 
