--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -22,7 +22,7 @@
 					<p class="a"> Main Page </p>
 				</div>
 				<div class="red">
-					<p class="a"> about us </p>
+					<p class="a">About Us</p>
 				</div>
 				<div class="red">
 					<p class="a"> Quiz </p>
