--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -58,7 +58,7 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/>
+			<center><img src="Images/arrow4.png" alt="Trulli" width="180" height="180"><center/>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
@@ -86,7 +86,7 @@
 
 		</div>
 		<div class="pink2">
-				<a href="index2.html"><center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"><center/>
+				<a href="index2.html"><center><img src="Images/arrow.png" alt="Trulli" width="180" height="180"><center/>
 		</div>
 	</div>
 
