--- a/CaitlynCode/index3.html
+++ b/CaitlynCode/index3.html
@@ -60,7 +60,7 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<a href="index2.html"><center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
+			<a href="index2.html"><center><img src="Images/arrow4.png" alt="Trulli" width="180" height="180"><center/></a>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
@@ -88,7 +88,7 @@
 
 		</div>
 		<div class="pink2">
-			<center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
+			<center><img src="Images/arrow.png" alt="Trulli" width="180" height="180"></center>
 		</div>
 	</div>
 
