--- a/CaitlynCode/index2.html
+++ b/CaitlynCode/index2.html
@@ -61,7 +61,7 @@
 
 	<div class="yellow2">
 		<div class="pink arrow">
-			<a href="index.html"><center><img src="Images/arrow4.PNG" alt="Trulli" width="180" height="180"><center/></a>
+			<a href="index.html"><center><img src="Images/arrow4.png" alt="Trulli" width="180" height="180"><center/></a>
 		</div>
 		<div class="green2">
 			<div class="lightblue">
@@ -89,7 +89,7 @@
 
 		</div>
 		<div class="pink2">
-			<a href="index3.html"><center><img src="Images/arrow.PNG" alt="Trulli" width="180" height="180"></center>
+			<a href="index3.html"><center><img src="Images/arrow.png" alt="Trulli" width="180" height="180"></center>
 		</div>
 	</div>
 
