--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -13,19 +13,19 @@
 		<div class="green">
 			<div class="orange">
 				<div class="red" >
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 			</div>
 			<div class="red">
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 			</div>
 			<div class="red">
-				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
+				<p class="a"><a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
-			<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
 			</div>
 			<div class="red">
-			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 			</div>
 			</div>
 			<div class="blue">
