--- a/CaitlynCode/index.html
+++ b/CaitlynCode/index.html
@@ -22,7 +22,7 @@
 				<p class="a"><a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
 			</div>
 			<div class="red">
 				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
