--- a/CaitlynCode/index3.html
+++ b/CaitlynCode/index3.html
@@ -11,21 +11,21 @@
 		<div class="pink"></div>
 		<div class="green">
 			<div class="orange">
-				<div class="red">
-					<p class="a"> Accommodations </p>
-				</div>
-				<div class="red">
-					<p class="a"> Interviews </p>
-				</div>
-				<div class="red">
-					<p class="a"> Main Page </p>
-				</div>
-				<div class="red">
-					<p class="a"> About Us </p>
-				</div>
-				<div class="red">
-					<p class="a"> Quiz </p>
-				</div>
+				<div class="red" >
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
+			</div>
+			<div class="red">
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
+			</div>
+			<div class="red">
+				<p class="a"><a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
+			</div>
+			<div class="red">
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
+			</div>
+			<div class="red">
+				<p class="a"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
+			</div>
 			</div>
 			<div class="blue">
 				<div class="lightblue">
