--- a/IEP website/index.html
+++ b/IEP website/index.html
@@ -12,21 +12,21 @@
          <div class="pink"></div>
          <div class="green">
          <div class="teal">
-         <div class="red">
-               <p class="b">Accommodations</p>
-   </div>
-         <div class="red">
-               <p class="b">Interviews</p>
-   </div>
-         <div class="red">
-               <p class="b">Main Page</p>
-   </div>
-         <div class="red">
-               <p class="b">About Us</p>
-   </div>
-           <div class="red">
-               <p class="b">Quiz</p>
-     </div>
+         <div class="red" >
+		<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
+	</div>
+		<div class="red">
+		<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
+         </div>
+                  <div class="red">
+		         <p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
+	</div>
+		<div class="red">
+			<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
+	</div>
+		<div class="red">
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
+	</div>
 </div>
          <div class="blue">
          <div class="dropdown">
