--- a/quizpage/index2.html
+++ b/quizpage/index2.html
@@ -21,10 +21,10 @@
 				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
-				<p class="b"> About Us </p>
+			<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
 			</div>
 			<div class="red">
-				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 			</div>
 		</div>
 		<div class="blue">
