--- a/aboutuspage/index3.html
+++ b/aboutuspage/index3.html
@@ -31,13 +31,24 @@
 			<div class="gray">
 				<div class="brown1">
 					<div class="black1">
-						<img src="image/seniors.jpg" class="restrict-img-size2"/>
+						<img src="image/seniors2.jpg"/>
 					</div>
-					<div class="black1"></div>
+					<div class="black2">
+						<p class="a"> Our names are Caitlyn Valiente, Israel Gonzalez, and Katherine Rivas. We were part of the Individual Education Program since we were in elementary. We believe that we learned what IEP is when high school began. Freshman year we began discovering and interacting with our IEP teacher, Gilbert Domingo. Not only did he informed us, what the purpose of iep and what it is , but he also helps us pass all our classes. If it wasn’t for IEP we would be struggling throughout high school. That is why we dedicated our senior project to design an IEP website. The purpose is to inform students at DaVinci Communication regarding Individual Education Program because it is essential for those who are a part of it. We are internally grateful for IEP and our teacher that help us the 9th-12th grade. </p>
+					</div>
 				</div>
 				<div class="brown2">
-					<div class="black1"></div>
-					<div class="black1"></div>
+					<div class="black3">
+						<img src="image/gilbert2.png" />
+					</div>
+					<div class="black4">
+						<p class="a"> Gilbert Domingo is an IEP teacher. He has been working at DaVinci Communication for .... </p>
+						<p></p>
+						<p class="a">email : gdomingo@davincischools.org</p>
+						<p class="a">Seminar room # : 3301</p>
+						<p class="a">Office room # : 3046</p>
+					
+					</div>
 				</div>
 				</div>
 			</div>
