--- a/aboutuspage/index3.html
+++ b/aboutuspage/index3.html
@@ -13,19 +13,19 @@
 	<div class="green">
 		<div class="orange">
 			<div class="red" >
-			<p class="b"> Accommodations </p>
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/IEP website/index.html">Accommodations</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> Interviews </p>
+				<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/CaitlynCode/index.html">Interviews</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> Main Page </p>
+				<p class="b"> <a href="https://kathyrivas.github.io/Senior-Project--KIC/">Main Page</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> About Us </p>
+			<p class="b"><p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/aboutuspage/index3.html">About Us</a></p>
 			</div>
 			<div class="red">
-			<p class="b"> Quiz </p>
+			<p class="b"><a href="https://Kathyrivas.github.io/Senior-Project--KIC/quizpage/index2.html">Quiz</a></p>
 			</div>
 		</div>
 		<div class="blue">
